fix: Make FAQ headings visible on blue backgrounds
This commit fixes an issue where the `<h2>` tags in the FAQ sections were invisible on blue backgrounds.

A new CSS rule has been added to `css/offers.css` to set the color of the `h2` to white when it is inside an even-numbered container.

--- a/css/offers.css
+++ b/css/offers.css
@@ -313,3 +313,8 @@
 .faq-item p {
     margin: 5px 0;
 }
+
+.light-theme .container:nth-child(even) .faq-section h2,
+.dark-theme .container:nth-child(even) .faq-section h2 {
+  color: var(--white);
+}
